--- a/frontend/src/components/carousel2/sass/_carousel.scss
+++ b/frontend/src/components/carousel2/sass/_carousel.scss
@@ -168,6 +168,7 @@
                 color: $itemViewerButtonColor;
                 border-radius: 4px;
                 font-size: 12px;
+                white-space: nowrap;
             }
         }
 
